bk_ida/gccida/g3/function_section
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/function_section/src/varasm.c:1030:11: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
else if ( in_section_0 != in_text ) 
          ^~~~~~~~~~~~
          in_section
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/function_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/function_section/src/varasm.c:1033:1: error: use of undeclared identifier 'in_section_0'; did you mean 'in_section'?
in_section_0 = in_text; 
^~~~~~~~~~~~
in_section
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/function_section/src/varasm.c:205:3: note: 'in_section' declared here
} in_section = no_section;
  ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/function_section/src/obj/varasm.o] Error 1
